kubernetes/apps/networking/traefik/add-ons/error-pages/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: error-pages
  namespace: networking
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: HostRegexp(`{any:.+}`) #HostRegexp(`{host:.+}`) HostRegexp(`{any:.+}`)
      kind: Rule
      priority: 10
      services:
        - name: error-pages
          port: 8080
      middlewares:
        - name: traefik-middleware-error-pages
